This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-03-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Moved to new iostreams.
	
2001-03-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.2
	Added doc-dist make target
	Added testCategory to tests
	
2001-02-25 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Merged in Win32 / MSVC++6.0 support patches from Lynn Owen 
	<opl@agoby.com>

2001-02-15 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.1
	Changed license to the GNU Lesser General Public License (LGPL).
	
2001-01-25 Cedric Le Goater <cedric@legoater.com>
	Added EMER, ALERT, CRIT and NOTICE shortcuts methods to Category.
	
2000-12-22 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Merged more patches from Cedric Le Goater, including an RPMS spec
	file and a testbench.
	
2000-12-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Added IdsaAppender contributed by Marc Welz. 
	Merged Tru64 support patches from Cedric Le Goater.
	
2000-12-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.0
	Integrated autoconf setup contributed by Cedric Le Goater.
	Fixed compilation problem in NDC on platforms with g++-2 library 
	(instead of g++-3). (Reported by Louis Bayle <lbayle@fairesuivre.fr>.)
	Added CategoryStream.
	
2000-12-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.1	
	Added Doxygen generated API documentation. Most of it has been 
	copied verbatim from LOG4J.
	Added NDC (Nested Diagnostic Context) class.
	Added OstreamAppender.
	Added SyslogAppender.
	Fixed bug in HierarchyMaintainer: getInstance should NOT set 
	the Appender of a newly instantiated Category.                
                
2000-12-03 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.0 
	First CVS import at SourceForge. 